--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "randombytes": "^2.1.0",
     "uuid": "^8.3.2",
     "vue": "^3.5.12",
+    "vue-draggable-plus": "^0.5.4",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
